--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Management System</title>
 </head>
+
 <body>
-    
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Educational Result</li>
+        <li>Recharces & Project</li>
+        <li>Contact</li>
+    </ul>
+
 </body>
+
 </html>
